# Commitlabs-Frontend

./: .env.example  .gitignore  ARCHITECTURE.md  ETAG_FEATURE_README.md  ETAG_IMPLEMENTATION_SUMMARY.md  ETAG_TEST_RESULTS.md  SettlementModal.tsx  TODO.md  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
contracts/: Cargo.toml  README.md  rustfmt.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/escrow/test_snapshots/test/: create_and_fund_locks_funds.1.json  create_commitment_emits_stable_indexable_event.1.json  create_rejects_duration_seconds_overflow.1.json  create_rejects_excessive_penalty.1.json  create_rejects_maturity_timestamp_overflow.1.json  default_penalty_creation_keeps_create_commitment_event_name.1.json  dispute_emits_stable_indexable_event.1.json  dispute_freezes_then_admin_resolves.1.json  early_exit_full_penalty.1.json  early_exit_invalid_state.1.json  early_exit_success.1.json  early_exit_unauthorized.1.json  early_exit_zero_penalty.1.json  fund_escrow_emits_stable_indexable_event.1.json  fund_fails_insufficient_balance.1.json  owner_index_tracks_commitments.1.json  record_attestation_clamps_score.1.json  refund_applies_penalty_to_fee_recipient.1.json  refund_emits_stable_indexable_event.1.json  release_after_maturity_returns_principal.1.json  release_before_maturity_fails.1.json  release_emits_stable_indexable_event.1.json  transfer_ownership_rejects_non_funded_commitments.1.json  (+4 more)
contracts/scripts/: deploy-testnet.sh  deploy-testnet.smoke.mjs
docs/: config.md  (+9 more)
(+119 files in other folders)
