[package]
name = "commitlabs-escrow"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Soroban escrow contract for CommitLabs liquidity commitments (create, fund, release, refund, dispute)."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[lints]
workspace = true

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
proptest = "1.5"
